<resources>
    <string name="app_name">My Test</string>
    <string name="add_and_tra">Add and track your medical tests</string>
    <string name="welcome_bac">welcome back, please login to your account</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="forget_your">Forget your password ?</string>
    <string name="login">Login</string>
    <string name="creat_new_a">Create new account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="registration">Registration</string>
    <string name="please_register_down_below">please register down below</string>
    <string name="full_name">Full name</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_assocciate_email">Enter your assocciate email</string>
    <string name="my_tests">My Tests</string>

</resources>