<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/add_and_tra"
        android:layout_width="358dp"
        android:layout_height="72dp"

        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="top"
        android:lineHeight="36sp"
        android:text="@string/add_and_tra"
        android:textAppearance="@style/add_and_tra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_bac"
        android:layout_width="358dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="top"
        android:text="@string/welcome_bac"
        android:textAppearance="@style/welcome_bac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_and_tra" />

    <!-- Rectangle 6 -->
    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/rectangle_6"
        android:layout_width="342dp"
        android:layout_height="56dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/email"
        android:paddingStart="8dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"

        android:background="@drawable/rectangle_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_bac" />

    <EditText
        android:id="@+id/passordLogin"
        android:layout_width="342dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"

        android:background="@drawable/rectangle_6"
        android:drawableStart="@drawable/password"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_6" />

    <TextView
        android:id="@+id/forget_your"
        android:layout_width="199dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="167dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/forget_your"
        android:textAppearance="@style/forget_your"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passordLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rectangle_7"
        android:layout_width="342dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rectangle_7"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.AppCompatButton>
    <!-- Creat new account -->
    <TextView
        android:id="@+id/creat_new_a"
        android:layout_width="162dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="556dp"
        android:layout_marginEnd="114dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/creat_new_a"
        android:textAppearance="@style/forget_your"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rectangle_8"
        android:layout_width="163dp"
        android:layout_height="56dp"

        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectangle_8"
        android:paddingStart="16dp"
        android:drawableStart="@drawable/facebook"
        android:text="@string/facebook"
        android:textAlignment="center"
        android:textAppearance="@style/create"
        android:textColor="@color/colortextbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creat_new_a" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rectangle_9"
        android:layout_width="163dp"
        android:layout_height="56dp"
        android:text="@string/google"
        android:textAppearance="@style/create"
        android:paddingStart="16dp"
        android:textAlignment="center"
        android:drawableStart="@drawable/google"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rectangle_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creat_new_a" />


</androidx.constraintlayout.widget.ConstraintLayout>
