<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/reg"
        android:layout_width="155dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="211dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="top"
        android:text="@string/registration"
        android:textAppearance="@style/reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_bac"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="144dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="top"
        android:text="@string/please_register_down_below"
        android:textAppearance="@style/welcome_bac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg" />

    <EditText
        android:id="@+id/rectangle_6"
        android:layout_width="342dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/text_login_p"
        android:drawableStart="@drawable/name"
        android:drawablePadding="8dp"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_bac" />

    <EditText
        android:id="@+id/rectanglerf"
        android:layout_width="342dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/text_login_p"
        android:drawableStart="@drawable/email"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_6" />

    <EditText
        android:id="@+id/passordLogin"
        android:layout_width="342dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/text_login_p"
        android:drawableStart="@drawable/password"
        android:drawablePadding="8dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectanglerf" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rectangle_7"
        android:layout_width="342dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:paddingTop="4dp"
        android:background="@drawable/buttons"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passordLogin" />

    <View
        android:id="@+id/line_1"
        android:layout_width="117dp"
        android:layout_height="1dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_7"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/line_2"
        android:layout_width="117dp"
        android:layout_height="1dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_7"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/wwq"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="125dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="Or continue with"
        android:textAppearance="@style/welcome_bac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rectangle_8"
        android:layout_width="163dp"
        android:layout_height="56dp"

        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/border_button"
        android:drawableStart="@drawable/facebook"
        android:drawablePadding="8dp"
        android:paddingStart="16dp"
        android:text="@string/facebook"
        android:textAlignment="center"
        android:textAppearance="@style/create"
        android:textColor="@color/colortextbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rectangle_9"
        android:layout_width="163dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_button"
        android:drawableStart="@drawable/google"
        android:paddingStart="16dp"
        android:text="@string/google"
        android:textAlignment="center"
        android:textAppearance="@style/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/backtologin"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="48dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="Have an account? "
        android:textAppearance="@style/welcome_bac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_8" />

    <TextView
        android:id="@+id/back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="117dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/login"
        android:textAppearance="@style/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_9" />

</androidx.constraintlayout.widget.ConstraintLayout>