<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="48dp"
        android:text=" "
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_back"
        android:drawableStart="@drawable/backvector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="12dp"/>

    <ImageView
        android:id="@+id/vector"
        android:layout_width="159dp"
        android:layout_height="137dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="79dp"
        android:background="@drawable/imgtoforget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forget_your"
        android:layout_width="289dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="-12sp"
        android:text="@string/forget_your"
        android:textAppearance="@style/reg"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vector" />

    <TextView
        android:id="@+id/welcome_bac"
        android:layout_width="204dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="top"
        android:text="@string/enter_your_assocciate_email"
        android:textAppearance="@style/welcome_bac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_your" />
    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/rectangle_6"
        android:layout_width="342dp"
        android:layout_height="56dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/email"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:drawablePadding="8dp"
        android:background="@drawable/text_login_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_bac" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rectangle_7"
        android:layout_width="342dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/buttons"
        android:fontFamily="@font/poppins_semibold"
        android:text="Confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_6" />

</androidx.constraintlayout.widget.ConstraintLayout>